--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="4.8.1" targetFramework="net472" />
+  <package id="Autofac.Owin" version="4.2.0" targetFramework="net472" />
+  <package id="Autofac.WebApi2" version="4.2.0" targetFramework="net472" />
+  <package id="Autofac.WebApi2.Owin" version="4.0.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="log4net" version="2.0.8" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net472" />
@@ -17,10 +21,6 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
-  <package id="Ninject" version="3.3.4" targetFramework="net472" />
-  <package id="Ninject.Web.Common" version="3.3.1" targetFramework="net472" />
-  <package id="Ninject.Web.Common.WebHost" version="3.3.1" targetFramework="net472" />
-  <package id="Ninject.Web.WebApi" version="3.3.0" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
 </packages>
