[ADD]#63519 Web UI - Translation services for UI; WebApi logic.

--- a/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Common/DH.Helpdesk.Common.csproj
@@ -121,6 +121,7 @@
     <Compile Include="Exceptions\PropertyNotFoundException.cs" />
     <Compile Include="Extensions\Boolean\BoolExtensions.cs" />
     <Compile Include="Extensions\Boolean\ToIntExtension.cs" />
+    <Compile Include="Extensions\EqualityComparers\LambdaEqualityComparer.cs" />
     <Compile Include="Extensions\DateTime\DateExtensions.cs" />
     <Compile Include="Extensions\GUID\GuidExtension.cs" />
     <Compile Include="Extensions\Decimal\DecimalExtension.cs" />
