Refactored files structure, optimized dependencies

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/angular.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/angular.json
@@ -39,7 +39,9 @@
             "styles": [
               "src/content/styles/styles.scss"              
             ],
-            "scripts": []
+            "scripts": [
+              "src/content/scripts/scripts.js"
+            ]
           },
           "configurations": {
             "production": {
