Cases Overview with free text search

--- a/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CasesOverview\SearchOverviewFilterInputModel.cs" />
+    <Compile Include="CurrentUser\UserSettingsModelOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
