Moved header/footer to parent app component. Added auth required structure directive.

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/angular.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/angular.json
@@ -37,7 +37,8 @@
               }
             ],
             "styles": [
-              "src/content/styles/styles.scss"              
+              "src/content/styles/styles.scss",
+              "./node_modules/@mobiscroll/angular/dist/css/mobiscroll.min.css"
             ],
             "scripts": [
               "src/content/scripts/scripts.js"
@@ -139,5 +140,5 @@
       }
     }
   },
-  "defaultProject": "web-mobile"  
+  "defaultProject": "web-mobile"
 }
