--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket/app.config
@@ -7,6 +7,7 @@
   <appSettings>
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="DeniedHtmlBodyString" value="concursolutions.com" />
+    <add key="enableNewEmailProcessing" value="False" />
   </appSettings>
   <system.web>
     <membership defaultProvider="ClientAuthenticationMembershipProvider">
