--- a/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Base\BaseInputModel.cs" />
     <Compile Include="CasesOverview\SearchOverviewFilterInputModel.cs" />
     <Compile Include="Case\CaseEditOutputModel.cs" />
+    <Compile Include="Case\Field\BaseCaseField.cs" />
     <Compile Include="Case\GetCaseInputModel.cs" />
     <Compile Include="CurrentUser\UserSettingsModelOutput.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
