[ADD]#64084 - Implement customer access security check.

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
@@ -152,6 +152,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Attributes\AuthorizeApiAttribute.cs" />
+    <Compile Include="Infrastructure\Attributes\SkipCustomerAuthorization.cs" />
     <Compile Include="Infrastructure\Attributes\UserCasePermissionsAttribute.cs" />
     <Compile Include="Infrastructure\BaseApiController.cs" />
     <Compile Include="Infrastructure\Cache\WebCacheService.cs" />
@@ -169,7 +170,7 @@
     <Compile Include="Infrastructure\Config\DependencyInjection\ServicesModule.cs" />
     <Compile Include="Infrastructure\Config\DependencyInjection\WorkContextModule.cs" />
     <Compile Include="Infrastructure\Config\Filters\ApiExceptionFilter.cs" />
-    <Compile Include="Infrastructure\Config\Filters\CustomerAccessValidationFilter.cs" />
+    <Compile Include="Infrastructure\Config\Filters\CustomerAccessAuthorizationFilter.cs" />
     <Compile Include="Infrastructure\Config\Filters\ModelValidationApiActionFilter.cs" />
     <Compile Include="..\CommonAssembly\SharedAssemblyInfo.cs">
       <Link>Properties\SharedAssemblyInfo.cs</Link>
