#63215 - Password not Casesensitive

--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -958,6 +958,7 @@
     <Compile Include="Models\Systems\Output\SystemOverview.cs" />
     <Compile Include="Models\Translation2.cs" />
     <Compile Include="Models\User\CustomerUserInfo.cs" />
+    <Compile Include="Models\User\UserLoginInfo.cs" />
     <Compile Include="Models\WebApi\WebApiCredentialModel.cs" />
     <Compile Include="Models\WorkflowStepModel.cs" />
     <Compile Include="Models\Users\Input\UserModule.cs" />
