attempt to push

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/DH.Helpdesk.Web.csproj
@@ -4051,6 +4051,7 @@
     <Content Include="Views\Notifiers\EditUserCategory.cshtml" />
     <Content Include="Views\Notifiers\_CategoryInput.cshtml" />
     <Content Include="Views\Notifiers\NewCategory.cshtml" />
+    <Content Include="Web.config.template" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\Admin\Views\Web.config">
