Added causing reasons and moved it to status section

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
@@ -148,6 +148,7 @@
     <Compile Include="Controllers\CaseOptionsController.cs" />
     <Compile Include="Controllers\CasesOverviewController.cs" />
     <Compile Include="Controllers\CaseTypesController.cs" />
+    <Compile Include="Controllers\ClosingReasonsController.cs" />
     <Compile Include="Controllers\CurrentUserController.cs" />
     <Compile Include="Controllers\DepartmentsController.cs" />
     <Compile Include="Controllers\OrganizationalUnitsController.cs" />
