--- a/dhHelpdeskNG/dhHelpdesk_NG.Service/packages.config
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Service/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EPPlus" version="4.0.2" targetFramework="net452" />
   <package id="LinqExtLibrary" version="1.0.4.2" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net452" />
