WebApi project config transformation;

--- a/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket.Library/DH.Helpdesk.Mail2Ticket.Library.vbproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Mail2Ticket.Library/DH.Helpdesk.Mail2Ticket.Library.vbproj
@@ -51,6 +51,16 @@
     <RegisterForComInterop>false</RegisterForComInterop>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'DhDev|AnyCPU'">
+    <DefineTrace>true</DefineTrace>
+    <OutputPath>bin\DhDev\</OutputPath>
+    <DocumentationFile>DH.Helpdesk.Mail2Ticket.Library.xml</DocumentationFile>
+    <Optimize>true</Optimize>
+    <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022,42353,42354,42355</NoWarn>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
