[UPD]#64655 WebApi Translation service

--- a/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Service/DH.Helpdesk.Services.csproj
@@ -346,6 +346,7 @@
     <Compile Include="Infrastructure\TimeZoneResolver\TimeZoneResolver.cs" />
     <Compile Include="Response\Questionnaire\OptionNote.cs" />
     <Compile Include="Services\Authentication\FederatedAuthenticationService.cs" />
+    <Compile Include="Services\Cache\TranslateCacheService.cs" />
     <Compile Include="Services\Cache\ICacheService.cs" />
     <Compile Include="Services\Concrete\Changes\BaseChangesService.cs" />
     <Compile Include="Services\ConditionService.cs" />
