--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/packages.config
@@ -23,6 +23,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net472" />
+  <package id="NodaTime" version="2.4.0" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="WebActivatorEx" version="2.2.0" targetFramework="net472" />
 </packages>
