--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -1,10 +1,11 @@
 {
     "name": "web-mobile",
-    "version": "0.1.1",
+    "version": "0.1.2",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
         "build": "ng build",
+        "build_dhdev": "ng build --prod --configuration=dhdev",
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e"
@@ -26,6 +27,7 @@
         "@ngx-translate/http-loader": "^3.0.1",
         "core-js": "^2.5.7",
         "moment": "^2.22.2",
+        "moment-timezone": "^0.5.21",
         "ngx-moment": "^3.1.0",
         "rxjs": "^6.2.2",
         "rxjs-compat": "^6.3.3",
@@ -39,6 +41,7 @@
         "@types/jasmine": "^2.8.8",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "^10.11.6",
+        "@types/moment-timezone": "^0.5.9",
         "codelyzer": "^4.4.4",
         "jasmine-core": "^3.2.1",
         "jasmine-spec-reporter": "^4.2.1",
