[ADD]#64973 - Mobile: Case files (attachments) download.

--- a/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.WebApi/DH.Helpdesk.WebApi.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Infrastructure\ActionResults\FileResult.cs" />
     <Compile Include="Infrastructure\Attributes\AuthorizeApiAttribute.cs" />
     <Compile Include="Infrastructure\Attributes\SkipCustomerAuthorization.cs" />
     <Compile Include="Infrastructure\Config\Filters\CheckUserCasePermissionsAttribute.cs" />
