--- a/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
+++ b/dhHelpdeskNG/DH.Helpdesk.Models/DH.Helpdesk.Models.csproj
@@ -55,6 +55,7 @@
     <Compile Include="CasesOverview\SearchOverviewFilterInputModel.cs" />
     <Compile Include="Case\CaseEditOutputModel.cs" />
     <Compile Include="Case\Field\BaseCaseField.cs" />
+    <Compile Include="Case\GetCaseFileInputModel.cs" />
     <Compile Include="Case\GetCaseInputModel.cs" />
     <Compile Include="Case\Options\CaseOptionsOutputModel.cs" />
     <Compile Include="Case\Options\GetCaseOptionsInputModel.cs" />
