--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/package.json
@@ -26,6 +26,7 @@
         "@ngx-translate/core": "^10.0.2",
         "@ngx-translate/http-loader": "^3.0.1",
         "core-js": "^2.5.7",
+        "file-saver": "^2.0.0-rc.4",
         "moment": "^2.22.2",
         "moment-timezone": "^0.5.21",
         "ngx-moment": "^3.1.0",
@@ -38,8 +39,9 @@
         "@angular/cli": "^6.1.4",
         "@angular/compiler-cli": "^6.1.4",
         "@angular/language-service": "^6.1.4",
+        "@types/file-saver": "^1.3.1",
         "@types/jasmine": "^2.8.8",
-        "@types/jasminewd2": "~2.0.3",
+        "@types/jasminewd2": "~2.0.3",        
         "@types/node": "^10.11.6",
         "@types/moment-timezone": "^0.5.9",
         "codelyzer": "^4.4.4",
