--- a/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
+++ b/dhHelpdeskNG/dhHelpdesk_NG.DTO/DH.Helpdesk.BusinessData.csproj
@@ -186,6 +186,7 @@
     <Compile Include="Models\CaseDocument\CaseDocumentTemplateModel.cs" />
     <Compile Include="Models\CaseDocument\CaseDocumentTextConditionIdentifierModel.cs" />
     <Compile Include="Models\CaseDocument\DocumentConditionOverview.cs" />
+    <Compile Include="Models\Case\CaseFileContent.cs" />
     <Compile Include="Models\Case\CaseSectionInfo.cs" />
     <Compile Include="Models\Case\CaseSolutionConditionOverview.cs" />
     <Compile Include="Models\Case\CaseSolutionInfo.cs" />
